--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -57,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing4"
             android:hint="@string/sign_id_hint"
+            android:inputType="text"
             android:textAppearance="@style/TextAppearance.Body"
             app:layout_constraintEnd_toEndOf="@+id/tv_sign_up_title"
             app:layout_constraintStart_toStartOf="@+id/tv_sign_up_id"
@@ -100,6 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:hint="@string/sign_up_nickname_hint"
+            android:inputType="text"
             android:textAppearance="@style/TextAppearance.Body"
             app:layout_constraintEnd_toEndOf="@+id/et_sign_up_password"
             app:layout_constraintStart_toStartOf="@+id/et_sign_up_password"
@@ -121,6 +123,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:hint="@string/sign_up_mbti_hint"
+            android:inputType="text"
             android:textAppearance="@style/TextAppearance.Body"
             app:layout_constraintEnd_toEndOf="@+id/et_sign_up_nickname"
             app:layout_constraintStart_toStartOf="@+id/et_sign_up_nickname"
