--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -15,75 +15,93 @@
         android:layout_height="match_parent"
         tools:context=".presentation.auth.SignInActivity">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gl_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="@dimen/spacing30" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_sign_in_sign_up"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gl_end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="@dimen/spacing30" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_sign_in_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing30"
-            android:gravity="center"
-            android:text="@string/sign_in_title"
-            android:textAppearance="@style/TextAppearance.LargeTitle"
-            app:layout_constraintEnd_toStartOf="@+id/gl_end"
-            app:layout_constraintStart_toStartOf="@+id/gl_start"
-            app:layout_constraintTop_toTopOf="parent" />
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/gl_start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_begin="@dimen/spacing30" />
 
-        <TextView
-            android:id="@+id/tv_sign_in_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="45dp"
-            android:text="@string/sign_id"
-            android:textAppearance="@style/TextAppearance.Title"
-            app:layout_constraintStart_toStartOf="@+id/tv_sign_in_title"
-            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_title" />
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/gl_end"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_end="@dimen/spacing30" />
 
-        <EditText
-            android:id="@+id/et_sign_in_id"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing4"
-            android:hint="@string/sign_id_hint"
-            android:inputType="text"
-            android:textAppearance="@style/TextAppearance.Body"
-            app:layout_constraintEnd_toEndOf="@+id/tv_sign_in_title"
-            app:layout_constraintStart_toStartOf="@+id/tv_sign_in_id"
-            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_id" />
+                <TextView
+                    android:id="@+id/tv_sign_in_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing30"
+                    android:gravity="center"
+                    android:text="@string/sign_in_title"
+                    android:textAppearance="@style/TextAppearance.LargeTitle"
+                    app:layout_constraintEnd_toStartOf="@+id/gl_end"
+                    app:layout_constraintStart_toStartOf="@+id/gl_start"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_sign_in_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing24"
-            android:text="@string/sign_password"
-            android:textAppearance="@style/TextAppearance.Title"
-            app:layout_constraintStart_toStartOf="@+id/et_sign_in_id"
-            app:layout_constraintTop_toBottomOf="@+id/et_sign_in_id" />
+                <TextView
+                    android:id="@+id/tv_sign_in_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="45dp"
+                    android:text="@string/sign_id"
+                    android:textAppearance="@style/TextAppearance.Title"
+                    app:layout_constraintStart_toStartOf="@+id/tv_sign_in_title"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_title" />
 
-        <EditText
-            android:id="@+id/et_sign_in_password"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:hint="@string/sign_password_hint"
-            android:inputType="textPassword"
-            android:textAppearance="@style/TextAppearance.Body"
-            app:layout_constraintEnd_toEndOf="@+id/et_sign_in_id"
-            app:layout_constraintStart_toStartOf="@+id/et_sign_in_id"
-            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_password" />
+                <EditText
+                    android:id="@+id/et_sign_in_id"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing4"
+                    android:hint="@string/sign_id_hint"
+                    android:inputType="text"
+                    android:textAppearance="@style/TextAppearance.Body"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_sign_in_title"
+                    app:layout_constraintStart_toStartOf="@+id/tv_sign_in_id"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_id" />
+
+                <TextView
+                    android:id="@+id/tv_sign_in_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing24"
+                    android:text="@string/sign_password"
+                    android:textAppearance="@style/TextAppearance.Title"
+                    app:layout_constraintStart_toStartOf="@+id/et_sign_in_id"
+                    app:layout_constraintTop_toBottomOf="@+id/et_sign_in_id" />
+
+                <EditText
+                    android:id="@+id/et_sign_in_password"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="@dimen/spacing30"
+                    android:hint="@string/sign_password_hint"
+                    android:inputType="textPassword"
+                    android:textAppearance="@style/TextAppearance.Body"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/et_sign_in_id"
+                    app:layout_constraintStart_toStartOf="@+id/et_sign_in_id"
+                    app:layout_constraintTop_toBottomOf="@id/tv_sign_in_password"
+                    app:layout_constraintVertical_bias="1.0" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
 
         <TextView
             android:id="@+id/tv_sign_in_sign_up"
@@ -94,20 +112,21 @@
             android:text="@string/sign_in_sign_up"
             android:textAppearance="@style/TextAppearance.Body"
             app:layout_constraintBottom_toTopOf="@+id/btn_sign_in_sign_in"
-            app:layout_constraintEnd_toStartOf="@+id/gl_end"
-            app:layout_constraintStart_toStartOf="@+id/gl_start" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_sign_in_sign_in"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/spacing30"
             android:layout_marginBottom="@dimen/spacing30"
             android:paddingVertical="10dp"
             android:text="@string/sign_in"
             android:textAppearance="@style/TextAppearance.Headline"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/gl_end"
-            app:layout_constraintStart_toStartOf="@+id/gl_start" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
