--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,16 @@
     <color name="gray_600">#3D3A3A</color>
     <color name="gray_700">#262525</color>
     <color name="black">#000000</color>
+
+    <color name="main_1">#1C5532</color>
+    <color name="main_2">#1C6739</color>
+    <color name="main_3">#238448</color>
+
+    <color name="point_1">#F0683E</color>
+    <color name="point_2">#FFCFC0</color>
+
+    <color name="error">#FF2633</color>
+
+    <color name="background_1">#FBFAF8</color>
+    <color name="background_2">#FAF7F2</color>
 </resources>
