--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,5 +82,27 @@
             app:layout_constraintTop_toBottomOf="@id/tv_main_id"
             tools:text="MBTI" />
 
+        <View
+            android:id="@+id/view_main_line"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginTop="@dimen/spacing20"
+            android:background="@color/gray_100"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_main_profile" />
+
+        <TextView
+            android:id="@+id/tv_main_logout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:paddingVertical="@dimen/spacing12"
+            android:text="@string/logout"
+            android:textAppearance="@style/TextAppearance.Body"
+            app:layout_constraintEnd_toEndOf="@id/gl_end"
+            app:layout_constraintStart_toStartOf="@id/gl_start"
+            app:layout_constraintTop_toBottomOf="@id/view_main_line" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
