--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -49,8 +49,8 @@
                     android:gravity="center"
                     android:text="@string/sign_in_title"
                     android:textAppearance="@style/TextAppearance.LargeTitle"
-                    app:layout_constraintEnd_toStartOf="@+id/gl_end"
-                    app:layout_constraintStart_toStartOf="@+id/gl_start"
+                    app:layout_constraintEnd_toStartOf="@id/gl_end"
+                    app:layout_constraintStart_toStartOf="@id/gl_start"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
@@ -69,11 +69,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/spacing4"
                     android:hint="@string/sign_id_hint"
-                    android:inputType="text"
                     android:textAppearance="@style/TextAppearance.Body"
-                    app:layout_constraintEnd_toEndOf="@+id/tv_sign_in_title"
-                    app:layout_constraintStart_toStartOf="@+id/tv_sign_in_id"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_id" />
+                    app:layout_constraintEnd_toEndOf="@id/tv_sign_in_title"
+                    app:layout_constraintStart_toStartOf="@id/tv_sign_in_id"
+                    app:layout_constraintTop_toBottomOf="@id/tv_sign_in_id" />
 
                 <TextView
                     android:id="@+id/tv_sign_in_password"
@@ -82,8 +81,8 @@
                     android:layout_marginTop="@dimen/spacing24"
                     android:text="@string/sign_password"
                     android:textAppearance="@style/TextAppearance.Title"
-                    app:layout_constraintStart_toStartOf="@+id/et_sign_in_id"
-                    app:layout_constraintTop_toBottomOf="@+id/et_sign_in_id" />
+                    app:layout_constraintStart_toStartOf="@id/et_sign_in_id"
+                    app:layout_constraintTop_toBottomOf="@id/et_sign_in_id" />
 
                 <EditText
                     android:id="@+id/et_sign_in_password"
@@ -95,8 +94,8 @@
                     android:inputType="textPassword"
                     android:textAppearance="@style/TextAppearance.Body"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/et_sign_in_id"
-                    app:layout_constraintStart_toStartOf="@+id/et_sign_in_id"
+                    app:layout_constraintEnd_toEndOf="@id/et_sign_in_id"
+                    app:layout_constraintStart_toStartOf="@id/et_sign_in_id"
                     app:layout_constraintTop_toBottomOf="@id/tv_sign_in_password"
                     app:layout_constraintVertical_bias="1.0" />
 
@@ -111,7 +110,7 @@
             android:padding="@dimen/spacing4"
             android:text="@string/sign_in_sign_up"
             android:textAppearance="@style/TextAppearance.Body"
-            app:layout_constraintBottom_toTopOf="@+id/btn_sign_in_sign_in"
+            app:layout_constraintBottom_toTopOf="@id/btn_sign_in_sign_in"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
