--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,9 +13,11 @@
     <color name="main_1">#1C5532</color>
     <color name="main_2">#1C6739</color>
     <color name="main_3">#238448</color>
+    <color name="main_4">#5DCA52</color>
 
     <color name="point_1">#F0683E</color>
     <color name="point_2">#FFCFC0</color>
+    <color name="point_3">#EB6752</color>
 
     <color name="error">#FF2633</color>
 
