[add] #7 profile recyclerView 구현을 위한 shape, text, theme 리소스 추가

--- a/app/src/main/res/values/text_appearance.xml
+++ b/app/src/main/res/values/text_appearance.xml
@@ -24,4 +24,14 @@
         <item name="android:lineHeight">20dp</item>
     </style>
 
+    <style name="TextAppearance.CaptionM1" parent="">
+        <item name="android:textSize">12sp</item>
+        <item name="android:lineHeight">16dp</item>
+    </style>
+
+    <style name="TextAppearance.CaptionM2" parent="">
+        <item name="android:textSize">10sp</item>
+        <item name="android:lineHeight">10dp</item>
+    </style>
+
 </resources>
