--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,8 @@
         <item name="android:minWidth">0dp</item>
         <item name="android:stateListAnimator">@null</item>
     </style>
+
+    <style name="ShapeAppearanceOverlay.App.CornerSize40Percent" parent="">
+        <item name="cornerSize">40%</item>
+    </style>
 </resources>
