[feat] #9 BottomNavigationView icon, text, background 색상 변경

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,7 +25,14 @@
             android:id="@+id/bnv_home"
             android:layout_width="0dp"
             android:layout_height="80dp"
+            android:background="@color/background_2"
+            app:itemActiveIndicatorStyle="@android:color/transparent"
             app:itemBackground="@android:color/transparent"
+            app:itemIconTint="@drawable/selector_home_menu_item"
+            app:itemRippleColor="@android:color/transparent"
+            app:itemTextAppearanceActive="@style/TextAppearance.CaptionM1"
+            app:itemTextAppearanceInactive="@style/TextAppearance.CaptionM1"
+            app:itemTextColor="@drawable/selector_home_menu_item"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
